# ScribusServer

./: .gitignore  README.md  opendtp.conf
builddir/: CPackConfig.cmake  CPackSourceConfig.cmake  cmake_uninstall.cmake  config.h
builddir/scribus/: moc_about.cxx  moc_aboutplugins.cxx  moc_actionmanager.cxx  moc_adjustcmsdialog.cxx  moc_aligndistribute.cxx  moc_alignselect.cxx  moc_annot.cxx  moc_annota.cxx  moc_applytemplatedialog.cxx  moc_arrowchooser.cxx  moc_autoform.cxx  moc_autoformbuttongroup.cxx  moc_basepointwidget.cxx  moc_bookmarkpalette.cxx  moc_bookmwin.cxx  moc_buttonicon.cxx  moc_canvas.cxx  moc_canvasgesture_rulermove.cxx  moc_canvasmode.cxx  moc_canvasmode_edit.cxx  moc_canvasmode_legacy.cxx  moc_canvasmode_measurements.cxx  moc_canvasmode_normal.cxx  moc_charselect.cxx  moc_charselectenhanced.cxx  moc_chartablemodel.cxx  moc_chartableview.cxx  moc_charzoom.cxx  moc_checkDocument.cxx  moc_cmsprefs.cxx  moc_cmykfw.cxx  moc_collect4output.cxx  moc_colorblind.cxx  moc_colorchart.cxx  moc_colorcombo.cxx  moc_colorlistbox.cxx  moc_colorm.cxx  moc_commonstrings.cxx  moc_contextmenu.cxx  moc_cpalette.cxx  (+224 more)
builddir/scribus/downloadmanager/: moc_scdlmgr.cxx  moc_scdlthread.cxx
builddir/scribus/text/: moc_storytext.cxx
builddir/scribus/ui/: moc_copypagetomasterpagedialog.cxx  moc_createrange.cxx  moc_downloaddictionaries.cxx  moc_edittoolbar.cxx  moc_filetoolbar.cxx  (+2 more)
scribus/: fileloader.cpp  fileloader.h  newfile.cpp  newfile.h  prefs.cpp  prefsmanager.cpp  prefsstructs.h  scribus.cpp  scribuscore.cpp  tabgeneral.cpp  tabmiscellaneous.cpp  tabmiscellaneous.ui
scribus/plugins/: CMakeLists.txt
scribus/plugins/opendtp/: CMakeLists.txt  Configuration.cpp  Configuration.h  IResponse.h  JsonResponse.cpp  JsonResponse.h  export_doc.py  infos.txt  logging.cpp  logging.h  moc_opendtp.cpp  opendtp.cpp  opendtp.h  opendtp.pro  opendtp_document.cpp  opendtp_document.h  opendtp_params.cpp  opendtp_params.h  opendtp_scriptercore.cpp  opendtp_scriptercore.h  opendtp_server.cpp  opendtp_server.h  socket_thread.cpp  socket_thread.h
(+123 files in other folders)
